improve gridspec plotting format (no more overlapping text) & add curvature threshold lines

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -136,18 +136,22 @@
     "    vmin: float = VMIN,\n",
     "    vmax: float = VMAX,\n",
     "    cmap: mpl.cm = CMAP,\n",
+    "    fontsize: int = 12,\n",
     "    image_plot_size_nm: float = 40,\n",
     "    plot_paths: list[str] = None,\n",
     "    plot_defects: bool = False,\n",
     "    plot_colour_paths: list[tuple[str, str]] = None,\n",
     "    plot_colour_norm_bounds: tuple[float, float] = (-0.3, 0.3),\n",
     "    plot_lineplots: list[tuple[str, str, str, str, str, tuple[float, float] | None]] = None,\n",
+    "    plot_lineplot_hlines: list[tuple[float, str]] = None,\n",
     "    save_path: Path | None = None,\n",
     "    show_plot: bool = True,\n",
     "    dpi=200,\n",
     "    figsize_multiplier: float = 4,\n",
-    "    wspace: float = 0.1,\n",
-    "    hspace: float = 0.1,\n",
+    "    wspace: float = 0.3,\n",
+    "    hspace: float = 0.4,\n",
+    "    wspace_inner: float = 0.15,\n",
+    "    hspace_inner: float = 0.3,\n",
     "    num_grains_to_limit_to: int | None = None,\n",
     ") -> None:\n",
     "    \"\"\"plot grains in a grain dictioanry in a grid layout\"\"\"\n",
@@ -181,14 +185,14 @@
     "            nrows=num_inner_rows,\n",
     "            ncols=num_inner_cols,\n",
     "            subplot_spec=outer[outer_coords],\n",
-    "            wspace=wspace,\n",
-    "            hspace=hspace,\n",
+    "            wspace=wspace_inner,\n",
+    "            hspace=hspace_inner,\n",
     "        )\n",
     "\n",
     "        # plot image\n",
     "        image_ax = plt.Subplot(fig, inner[0, 0])\n",
     "        image_ax.imshow(grain_image, vmin=vmin, vmax=vmax, cmap=cmap)\n",
-    "        image_ax.set_title(f\"Grain {grain_index}\\np_to_nm: {grain_p_to_nm:.2f} nm/px\")\n",
+    "        image_ax.set_title(f\"Grain {grain_index}\\np_to_nm: {grain_p_to_nm:.2f} nm/px\", fontsize=fontsize, pad=2)\n",
     "        image_ax.axis(\"off\")\n",
     "        fig.add_subplot(image_ax)\n",
     "\n",
@@ -228,7 +232,7 @@
     "                                        linewidth=2,\n",
     "                                    )\n",
     "\n",
-    "        mask_ax.set_title(\"Mask\")\n",
+    "        mask_ax.set_title(\"Mask\", fontsize=fontsize, pad=2)\n",
     "        mask_ax.axis(\"off\")\n",
     "        fig.add_subplot(mask_ax)\n",
     "\n",
@@ -271,19 +275,27 @@
     "                lineplot_x_data = grain_data[lineplot_x_name]\n",
     "                lineplot_y_data = grain_data[lineplot_y_name]\n",
     "                lineplot_ax.plot(lineplot_x_data, lineplot_y_data)\n",
-    "                lineplot_ax.set_xlabel(lineplot_xlabel)\n",
-    "                lineplot_ax.set_ylabel(lineplot_ylabel)\n",
-    "                lineplot_ax.set_title(lineplot_title)\n",
+    "                lineplot_ax.set_xlabel(lineplot_xlabel, fontsize=fontsize)\n",
+    "                lineplot_ax.set_ylabel(lineplot_ylabel, fontsize=fontsize)\n",
+    "                lineplot_ax.set_title(lineplot_title, fontsize=fontsize, pad=2)\n",
+    "                lineplot_ax.tick_params(labelsize=6)\n",
     "                if lineplot_norm_bounds is not None:\n",
     "                    lineplot_ax.set_ylim(lineplot_norm_bounds)\n",
     "\n",
-    "            fig.add_subplot(lineplot_ax)\n",
+    "                if plot_lineplot_hlines is not None:\n",
+    "                    for hline_value, hline_label in plot_lineplot_hlines:\n",
+    "                        lineplot_ax.axhline(y=hline_value, color=\"grey\", linestyle=\"--\", linewidth=0.5)\n",
+    "                        # lineplot_ax.text(\n",
+    "                        #     0.01, hline_value, hline_label, color=\"grey\", fontsize=6, transform=lineplot_ax.transAxes\n",
+    "                        # )\n",
+    "\n",
+    "                fig.add_subplot(lineplot_ax)\n",
     "\n",
     "    if save_path is not None:\n",
     "        # create the parent directory\n",
     "        save_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "        print(f\"saving figure to {save_path}\")\n",
-    "        fig.savefig(save_path, dpi=dpi)\n",
+    "        fig.savefig(save_path, dpi=dpi, bbox_inches=\"tight\")\n",
     "\n",
     "    if show_plot:\n",
     "        plt.show()\n",
@@ -651,6 +663,10 @@
     "                \"Curvature\",\n",
     "                (-0.5, 0.5),\n",
     "            ]\n",
+    "        ],\n",
+    "        plot_lineplot_hlines=[\n",
+    "            (defect_curvature_threshold_radpernm, \"upper curvature threshold\"),\n",
+    "            (-defect_curvature_threshold_radpernm, \"lower curvature threshold\"),\n",
     "        ],\n",
     "        save_path=save_dirs[sample_type] / f\"grains_with_defects_{sample_type}.png\",\n",
     "        show_plot=True,\n",
