add middle curvature analysis

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -751,6 +751,94 @@
     "plt.savefig(combined_save_path, dpi=200, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32faf404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for each sample type, we want to quantify the sharpness of the turn in the middle X% of the traces for each grain\n",
+    "middle_percentile = 50\n",
+    "\n",
+    "bad_grains_middle_curvature_analysis = []\n",
+    "grain_dicts_middle_curvature_analysis = {}\n",
+    "for sample_type, grains_dict_sample in grains_dicts_curvature_defects.items():\n",
+    "    grain_dicts_middle_curvature_analysis[sample_type] = {}\n",
+    "    for grain_index, grain_data in grains_dict_sample.items():\n",
+    "        grain_image = grain_data[\"image\"]\n",
+    "        grain_mask = grain_data[\"predicted_mask\"]\n",
+    "        intersection_labels = grain_data[\"intersection_labels\"]\n",
+    "        p_to_nm = grain_data[\"p_to_nm\"]\n",
+    "        resampled_path_px = grain_data[\"resampled_path_px\"]\n",
+    "        resampled_distances_nm = grain_data[\"resampled_distances_nm\"]\n",
+    "        path_curvatures = grain_data[\"curvature\"]\n",
+    "        cumulative_resampled_distances_nm = grain_data[\"cumulative_resampled_distances_nm\"]\n",
+    "\n",
+    "        # Get the middle Xth percentile of the trace\n",
+    "        lower_bound_index = int(len(resampled_path_px) * (100 - middle_percentile) / 200)\n",
+    "        upper_bound_index = int(len(resampled_path_px) * (100 + middle_percentile) / 200)\n",
+    "        middle_path_px = resampled_path_px[lower_bound_index:upper_bound_index]\n",
+    "        middle_path_curvatures = path_curvatures[lower_bound_index:upper_bound_index]\n",
+    "        middle_cumulative_resampled_distances_nm = cumulative_resampled_distances_nm[lower_bound_index:upper_bound_index]\n",
+    "\n",
+    "        if len(middle_path_px) < 5:\n",
+    "            bad_grains_middle_curvature_analysis.append(grain_index)\n",
+    "            continue\n",
+    "\n",
+    "        middle_mean_curvature = np.mean(middle_path_curvatures)\n",
+    "        middle_std_curvature = np.std(middle_path_curvatures)\n",
+    "\n",
+    "        # store\n",
+    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index] = grain_data.copy()\n",
+    "\n",
+    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "            \"middle_path_mean_curvature\"\n",
+    "        ] = middle_mean_curvature\n",
+    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "            \"middle_path_std_curvature\"\n",
+    "        ] = middle_std_curvature\n",
+    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\"middle_path_px\"] = middle_path_px\n",
+    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "            \"middle_path_curvatures\"\n",
+    "        ] = middle_path_curvatures\n",
+    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "            \"middle_cumulative_resampled_distances_nm\"\n",
+    "        ] = middle_cumulative_resampled_distances_nm\n",
+    "\n",
+    "print(f\"Bad grains for middle curvature analysis: {bad_grains_middle_curvature_analysis}\")\n",
+    "\n",
+    "# plot the middle curvature analysis\n",
+    "for sample_type, grain_dict in grain_dicts_middle_curvature_analysis.items():\n",
+    "    plot_all_grains_dictionary(\n",
+    "        grain_dict=grain_dict,\n",
+    "        vmin=VMIN,\n",
+    "        vmax=VMAX,\n",
+    "        cmap=CMAP,\n",
+    "        plot_paths=[\"middle_path_px\"],\n",
+    "        plot_colour_paths=[(\"middle_path_px\", \"middle_path_curvatures\")],\n",
+    "        plot_lineplots=[\n",
+    "            [\n",
+    "                \"middle_cumulative_resampled_distances_nm\",\n",
+    "                \"middle_path_curvatures\",\n",
+    "                \"distance (nm)\",\n",
+    "                \"curvature (rad/nm)\",\n",
+    "                \"Curvature\",\n",
+    "                (-0.5, 0.5),\n",
+    "            ]\n",
+    "        ],\n",
+    "        plot_lineplot_hlines=[\n",
+    "            (defect_curvature_threshold_radpernm, \"upper curvature threshold\"),\n",
+    "            (-defect_curvature_threshold_radpernm, \"lower curvature threshold\"),\n",
+    "        ],\n",
+    "        save_path=save_dirs[sample_type] / f\"grains_middle_path_curvature_{sample_type}.png\",\n",
+    "        show_plot=True,\n",
+    "        figsize_multiplier=5,\n",
+    "        num_grains_to_limit_to=30,\n",
+    "        num_cols=5,\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
