get middle X nm of the traces

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -776,12 +776,30 @@
     "        path_curvatures = grain_data[\"curvature\"]\n",
     "        cumulative_resampled_distances_nm = grain_data[\"cumulative_resampled_distances_nm\"]\n",
     "\n",
-    "        # Get the middle Xth percentile of the trace\n",
-    "        lower_bound_index = int(len(resampled_path_px) * (100 - middle_percentile) / 200)\n",
-    "        upper_bound_index = int(len(resampled_path_px) * (100 + middle_percentile) / 200)\n",
-    "        middle_path_px = resampled_path_px[lower_bound_index:upper_bound_index]\n",
-    "        middle_path_curvatures = path_curvatures[lower_bound_index:upper_bound_index]\n",
-    "        middle_cumulative_resampled_distances_nm = cumulative_resampled_distances_nm[lower_bound_index:upper_bound_index]\n",
+    "        # get the middle point index by finding the index of half the distance\n",
+    "        trace_total_distance_nm = np.sum(resampled_distances_nm)\n",
+    "        # print(f\"trace total distance nm: {trace_total_distance_nm}\")\n",
+    "        trace_half_total_distance_nm = trace_total_distance_nm / 2.0\n",
+    "        # print(f\"trace half total distance nm: {trace_half_total_distance_nm}\")\n",
+    "        # find the index of the entry in cumulative distances that is closest to half the total distance\n",
+    "        middle_middle_index = np.searchsorted(cumulative_resampled_distances_nm, trace_half_total_distance_nm)\n",
+    "        middle_middle_nm = cumulative_resampled_distances_nm[middle_middle_index]\n",
+    "        # print(f\"middle middle index: {middle_middle_index}, middle_middle_nm: {middle_middle_nm}\")\n",
+    "        middle_distance_start_nm = middle_middle_nm - middle_distance_nm / 2\n",
+    "        middle_distance_end_nm = middle_middle_nm + middle_distance_nm / 2\n",
+    "        # print(\n",
+    "        #     f\"middle distance start nm: {middle_distance_start_nm}, middle distance end nm: {middle_distance_end_nm}\"\n",
+    "        # )\n",
+    "        middle_start_index = np.searchsorted(cumulative_resampled_distances_nm, middle_distance_start_nm)\n",
+    "        middle_end_index = np.searchsorted(cumulative_resampled_distances_nm, middle_distance_end_nm)\n",
+    "        # print(f\"middle start index: {middle_start_index}, middle end index: {middle_end_index}\")\n",
+    "\n",
+    "        # Grab the middle path pixels\n",
+    "        middle_path_px = resampled_path_px[middle_start_index:middle_end_index]\n",
+    "        middle_path_curvatures = path_curvatures[middle_start_index:middle_end_index]\n",
+    "        middle_cumulative_resampled_distances_nm = cumulative_resampled_distances_nm[\n",
+    "            middle_start_index:middle_end_index\n",
+    "        ]\n",
     "\n",
     "        if len(middle_path_px) < 5:\n",
     "            bad_grains_middle_curvature_analysis.append(grain_index)\n",
