plot the mean, stddev, sum of middle region curvatures

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -565,11 +565,13 @@
     "            sigma=curvature_gaussian_sigma_points,\n",
     "            mode=\"nearest\",\n",
     "        )\n",
+    "        abs_path_curvatures = np.abs(path_curvatures)\n",
     "\n",
     "        # save the original grain data\n",
     "        grains_dicts_curvature[sample_type][grain_index] = grain_data\n",
     "        # add the curvature to the grain data\n",
     "        grains_dicts_curvature[sample_type][grain_index][\"curvature\"] = path_curvatures\n",
+    "        grains_dicts_curvature[sample_type][grain_index][\"abs_curvature\"] = abs_path_curvatures\n",
     "\n",
     "\n",
     "# plot all grains with curvature\n",
@@ -584,11 +586,11 @@
     "        plot_lineplots=[\n",
     "            [\n",
     "                \"cumulative_resampled_distances_nm\",\n",
-    "                \"curvature\",\n",
+    "                \"abs_curvature\",\n",
     "                \"distance (nm)\",\n",
     "                \"curvature (rad/nm)\",\n",
     "                \"Curvature\",\n",
-    "                (-0.5, 0.5),\n",
+    "                (0.0, 0.5),\n",
     "            ]\n",
     "        ],\n",
     "        save_path=save_dirs[sample_type] / f\"grains_with_curvature_{sample_type}.png\",\n",
@@ -657,11 +659,11 @@
     "        plot_lineplots=[\n",
     "            [\n",
     "                \"cumulative_resampled_distances_nm\",\n",
-    "                \"curvature\",\n",
+    "                \"abs_curvature\",\n",
     "                \"distance (nm)\",\n",
     "                \"curvature (rad/nm)\",\n",
     "                \"Curvature\",\n",
-    "                (-0.5, 0.5),\n",
+    "                (0.0, 0.5),\n",
     "            ]\n",
     "        ],\n",
     "        plot_lineplot_hlines=[\n",
@@ -760,7 +762,7 @@
    "outputs": [],
    "source": [
     "# for each sample type, we want to quantify the sharpness of the turn in the middle X% of the traces for each grain\n",
-    "middle_percentile = 50\n",
+    "middle_distance_nm = 10\n",
     "\n",
     "bad_grains_middle_curvature_analysis = []\n",
     "grain_dicts_middle_curvature_analysis = {}\n",
@@ -773,7 +775,7 @@
     "        p_to_nm = grain_data[\"p_to_nm\"]\n",
     "        resampled_path_px = grain_data[\"resampled_path_px\"]\n",
     "        resampled_distances_nm = grain_data[\"resampled_distances_nm\"]\n",
-    "        path_curvatures = grain_data[\"curvature\"]\n",
+    "        path_abs_curvatures = grain_data[\"abs_curvature\"]\n",
     "        cumulative_resampled_distances_nm = grain_data[\"cumulative_resampled_distances_nm\"]\n",
     "\n",
     "        # get the middle point index by finding the index of half the distance\n",
@@ -796,7 +798,7 @@
     "\n",
     "        # Grab the middle path pixels\n",
     "        middle_path_px = resampled_path_px[middle_start_index:middle_end_index]\n",
-    "        middle_path_curvatures = path_curvatures[middle_start_index:middle_end_index]\n",
+    "        middle_path_curvatures = path_abs_curvatures[middle_start_index:middle_end_index]\n",
     "        middle_cumulative_resampled_distances_nm = cumulative_resampled_distances_nm[\n",
     "            middle_start_index:middle_end_index\n",
     "        ]\n",
@@ -807,6 +809,7 @@
     "\n",
     "        middle_mean_curvature = np.mean(middle_path_curvatures)\n",
     "        middle_std_curvature = np.std(middle_path_curvatures)\n",
+    "        middle_sum_curvature = np.sum(middle_path_curvatures)\n",
     "\n",
     "        # store\n",
     "        grain_dicts_middle_curvature_analysis[sample_type][grain_index] = grain_data.copy()\n",
@@ -824,6 +827,9 @@
     "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
     "            \"middle_cumulative_resampled_distances_nm\"\n",
     "        ] = middle_cumulative_resampled_distances_nm\n",
+    "        grain_dicts_middle_curvature_analysis[sample_type][grain_index][\n",
+    "            \"middle_path_sum_curvature\"\n",
+    "        ] = middle_sum_curvature\n",
     "\n",
     "print(f\"Bad grains for middle curvature analysis: {bad_grains_middle_curvature_analysis}\")\n",
     "\n",
@@ -856,6 +862,88 @@
     "        num_grains_to_limit_to=30,\n",
     "        num_cols=5,\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb078d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the distributions of middle curvature stats\n",
+    "all_middle_mean_curvatures = {}\n",
+    "all_middle_std_curvatures = {}\n",
+    "all_middle_sum_curvatures = {}\n",
+    "for sample_type, grain_dict in grain_dicts_middle_curvature_analysis.items():\n",
+    "    middle_mean_curvatures = []\n",
+    "    middle_std_curvatures = []\n",
+    "    middle_sum_curvatures = []\n",
+    "    for grain_index, grain_data in grain_dict.items():\n",
+    "        middle_mean_curvatures.append(grain_data[\"middle_path_mean_curvature\"])\n",
+    "        middle_std_curvatures.append(grain_data[\"middle_path_std_curvature\"])\n",
+    "        middle_sum_curvatures.append(grain_data[\"middle_path_sum_curvature\"])\n",
+    "    all_middle_mean_curvatures[sample_type] = middle_mean_curvatures\n",
+    "    all_middle_std_curvatures[sample_type] = middle_std_curvatures\n",
+    "    all_middle_sum_curvatures[sample_type] = middle_sum_curvatures\n",
+    "\n",
+    "# plot mean curvatures\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
+    "for i, (sample_type, mean_curvatures) in enumerate(all_middle_mean_curvatures.items()):\n",
+    "    sns.stripplot(x=[sample_type] * len(mean_curvatures), y=mean_curvatures, color=\"grey\", ax=axes[i])\n",
+    "    sns.violinplot(\n",
+    "        x=[sample_type] * len(mean_curvatures),\n",
+    "        y=mean_curvatures,\n",
+    "        color=\"lightblue\",\n",
+    "        inner=None,\n",
+    "        linewidth=0.5,\n",
+    "        alpha=0.5,\n",
+    "        ax=axes[i],\n",
+    "    )\n",
+    "    axes[i].set_title(f\"Mean Curvature - {sample_type}\")\n",
+    "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
+    "    axes[i].set_xticklabels([])\n",
+    "plt.suptitle(\"Distribution of Mean Curvatures by Sample Type\", fontsize=16)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "# plot std curvatures\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
+    "for i, (sample_type, std_curvatures) in enumerate(all_middle_std_curvatures.items()):\n",
+    "    sns.stripplot(x=[sample_type] * len(std_curvatures), y=std_curvatures, color=\"grey\", ax=axes[i])\n",
+    "    sns.violinplot(\n",
+    "        x=[sample_type] * len(std_curvatures),\n",
+    "        y=std_curvatures,\n",
+    "        color=\"lightblue\",\n",
+    "        inner=None,\n",
+    "        linewidth=0.5,\n",
+    "        alpha=0.5,\n",
+    "        ax=axes[i],\n",
+    "    )\n",
+    "    axes[i].set_title(f\"Std Curvature - {sample_type}\")\n",
+    "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
+    "    axes[i].set_xticklabels([])\n",
+    "plt.suptitle(\"Distribution of Std Curvatures by Sample Type\", fontsize=16)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "# plot sum curvatures\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
+    "for i, (sample_type, sum_curvatures) in enumerate(all_middle_sum_curvatures.items()):\n",
+    "    sns.stripplot(x=[sample_type] * len(sum_curvatures), y=sum_curvatures, color=\"grey\", ax=axes[i])\n",
+    "    sns.violinplot(\n",
+    "        x=[sample_type] * len(sum_curvatures),\n",
+    "        y=sum_curvatures,\n",
+    "        color=\"lightblue\",\n",
+    "        inner=None,\n",
+    "        linewidth=0.5,\n",
+    "        alpha=0.5,\n",
+    "        ax=axes[i],\n",
+    "    )\n",
+    "    axes[i].set_title(f\"Sum Curvature - {sample_type}\")\n",
+    "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
+    "    axes[i].set_xticklabels([])\n",
+    "plt.suptitle(\"Distribution of Sum Curvatures by Sample Type\", fontsize=16)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
