ensure the OT1 OT2 renaming happens at the point of cropping the grains for both bound and unbound samples and relevant analysis scripts pull from this folder

--- a/hariborings/cas9_segment_and_get_masks.ipynb
+++ b/hariborings/cas9_segment_and_get_masks.ipynb
@@ -61,7 +61,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAMPLE = \"OT2_SC\"\n",
+    "NEW_NAME_SAMPLE_TYPE = \"OT2_SC\"\n",
+    "# Get the old name sample type where OT1 = OT2 and OT2 = OT1\n",
+    "if NEW_NAME_SAMPLE_TYPE == \"OT1_SC\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"OT2_SC\"\n",
+    "elif NEW_NAME_SAMPLE_TYPE == \"OT2_SC\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"OT1_SC\"\n",
+    "# Keep the ON type the same\n",
+    "elif NEW_NAME_SAMPLE_TYPE == \"ON_SC\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"ON_SC\"\n",
+    "else:\n",
+    "    raise ValueError(f\"Unknown sample type: {NEW_NAME_SAMPLE_TYPE}\")\n",
+    "\n",
     "MAX_P_TO_NM = 10.0\n",
     "PLOT_RESULTS = True\n",
     "SIMPLE_HEIGHT_THRESHOLD = 1.0\n",
@@ -84,7 +95,7 @@
    "outputs": [],
    "source": [
     "# Get data files\n",
-    "sample_data_dir = FLATTENED_IMAGE_DIR / SAMPLE / \"processed\"\n",
+    "sample_data_dir = FLATTENED_IMAGE_DIR / OLD_NAME_SAMPLE_TYPE / \"processed\"\n",
     "data_files = list(sample_data_dir.glob(\"*.topostats\"))\n",
     "print(f\"num files: {len(data_files)}\")\n",
     "\n",
@@ -303,7 +314,9 @@
     "\n",
     "today = datetime.today().strftime(\"%Y-%m-%d\")\n",
     "\n",
-    "IMAGE_SAVE_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/extracted_grains/cas9_{SAMPLE}/{today}/\")\n",
+    "IMAGE_SAVE_DIR = Path(\n",
+    "    f\"/Users/sylvi/topo_data/hariborings/extracted-grains-new-names-20250814/cas9_{NEW_NAME_SAMPLE_TYPE}/{today}/\"\n",
+    ")\n",
     "IMAGE_SAVE_DIR.mkdir(exist_ok=True, parents=True)"
    ]
   },
