--- a/hariborings/figure_1.ipynb
+++ b/hariborings/figure_1.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = Path(\"/Users/sylvi/topo_data/hariborings/extracted_grains/\")\n",
+    "DATA_DIR = Path(\"/Users/sylvi/topo_data/hariborings/extracted-grains-new-names-20250814/\")\n",
     "# FIG_SAVE_DIR = Path(f\"/Volumes/shared-3/pyne_group/Shared/Papers/cas9_minicircles/figure_1/\")\n",
     "# FIG_SAVE_DIR = Path(\n",
     "#     f\"/Users/sylvi/Library/CloudStorage/GoogleDrive-sylvia.whittle@sheffield.ac.uk/Shared drives/Pyne_group_data/Papers/Cas9/figures/fig_1_revised/updated_nomenclature/\"\n",
@@ -136,10 +136,13 @@
     "\n",
     "print(df.head())\n",
     "\n",
+    "# THIS IS NO LONGER NEEDED AS OF 20250814 WHERE I MANUALLY RENAMED THE DATA IN THE extracted-grains-new-names-20250814\n",
+    "# DIRECTORY AND UPDATED THE CROPPING SCRIPTS TO RENAME THE DATA AS THEY'RE CROPPED.\n",
+    "# AS LONG AS WE LOAD FROM extracted-grains-new-names-20250814, IT SHOULD BE RENAMED PROPERLY.\n",
     "# swap the OT1 and OT2 substrings in the sample_type column for each row\n",
-    "df[\"sample_type\"] = df[\"sample_type\"].apply(lambda x: re.sub(r\"OT1\", \"OT3\", x))\n",
-    "df[\"sample_type\"] = df[\"sample_type\"].apply(lambda x: re.sub(r\"OT2\", \"OT1\", x))\n",
-    "df[\"sample_type\"] = df[\"sample_type\"].apply(lambda x: re.sub(r\"OT3\", \"OT2\", x))\n",
+    "# df[\"sample_type\"] = df[\"sample_type\"].apply(lambda x: re.sub(r\"OT1\", \"OT3\", x))\n",
+    "# df[\"sample_type\"] = df[\"sample_type\"].apply(lambda x: re.sub(r\"OT2\", \"OT1\", x))\n",
+    "# df[\"sample_type\"] = df[\"sample_type\"].apply(lambda x: re.sub(r\"OT3\", \"OT2\", x))\n",
     "\n",
     "# save df to csv\n",
     "df.to_csv(CSV_SAVE_DIR / f\"plotting_data_{TODAY_DATE}_max_p_to_nm_{MAX_P_TO_NM}.csv\", index=False)\n",
