--- a/hariborings/figure_1_metrics.ipynb
+++ b/hariborings/figure_1_metrics.ipynb
@@ -29,7 +29,9 @@
    "source": [
     "SAMPLE_TYPE = \"unbound_OT2_REL\"  # options: unbound, bound, on_sc, ot1_rel etc.\n",
     "DATE_TO_LOAD_FROM = \"2024-05-21\"\n",
-    "DATA_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/extracted_grains/{SAMPLE_TYPE}/date_{DATE_TO_LOAD_FROM}\")\n",
+    "DATA_DIR = Path(\n",
+    "    f\"/Users/sylvi/topo_data/hariborings/extracted-grains-new-names-20250814/{SAMPLE_TYPE}/date_{DATE_TO_LOAD_FROM}\"\n",
+    ")\n",
     "\n",
     "# Load the data\n",
     "FILE_PATH = DATA_DIR / \"ferets_dict.pkl\"\n",
