fix paths for bound analysis script post-rename

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -46,12 +46,12 @@
    "outputs": [],
    "source": [
     "TODAY_DATE = datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "DATE_TO_READ_FROM = \"2024-03-22\"\n",
+    "DATE_TO_READ_FROM = \"2024-05-21\"\n",
     "BASE_DATA_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/extracted-grains-new-names-20250814/\")\n",
     "data_dirs = {\n",
-    "    \"ON_SC\": BASE_DATA_DIR / f\"cas9_ON_SC/{DATE_TO_READ_FROM}\",\n",
-    "    \"OT1_SC\": BASE_DATA_DIR / f\"cas9_OT1_SC/{DATE_TO_READ_FROM}\",\n",
-    "    \"OT2_SC\": BASE_DATA_DIR / f\"cas9_OT2_SC/{DATE_TO_READ_FROM}\",\n",
+    "    \"ON_SC\": BASE_DATA_DIR / f\"cas9_ON_SC/date_{DATE_TO_READ_FROM}\",\n",
+    "    \"OT1_SC\": BASE_DATA_DIR / f\"cas9_OT1_SC/date_{DATE_TO_READ_FROM}\",\n",
+    "    \"OT2_SC\": BASE_DATA_DIR / f\"cas9_OT2_SC/date_{DATE_TO_READ_FROM}\",\n",
     "}\n",
     "BASE_SAVE_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/processed_grains/\")\n",
     "MAX_PX_TO_NM = 10.0\n",
@@ -68,7 +68,7 @@
     "grains_dicts = {}\n",
     "for sample_type in sample_types:\n",
     "    grains_dicts[sample_type] = {}\n",
-    "    file_path = data_dirs[sample_type] / \"grain_dict.pkl\"\n",
+    "    file_path = data_dirs[sample_type] / \"ferets_dict.pkl\"\n",
     "    with open(file_path, \"rb\") as f:\n",
     "        sample_grains_dicts = pickle.load(f)\n",
     "        for grain_index, single_grain_dict in sample_grains_dicts.items():\n",
@@ -903,7 +903,7 @@
     "    axes[i].set_title(f\"Mean Curvature - {sample_type}\")\n",
     "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
     "    axes[i].set_xticklabels([])\n",
-    "plt.suptitle(\"Distribution of Mean Curvatures by Sample Type\", fontsize=16)\n",
+    "plt.suptitle(\"Distribution of middle Mean Curvatures by Sample Type\", fontsize=16)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "# plot std curvatures\n",
@@ -922,7 +922,7 @@
     "    axes[i].set_title(f\"Std Curvature - {sample_type}\")\n",
     "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
     "    axes[i].set_xticklabels([])\n",
-    "plt.suptitle(\"Distribution of Std Curvatures by Sample Type\", fontsize=16)\n",
+    "plt.suptitle(\"Distribution of middle Std Curvatures by Sample Type\", fontsize=16)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "# plot sum curvatures\n",
@@ -941,7 +941,7 @@
     "    axes[i].set_title(f\"Sum Curvature - {sample_type}\")\n",
     "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
     "    axes[i].set_xticklabels([])\n",
-    "plt.suptitle(\"Distribution of Sum Curvatures by Sample Type\", fontsize=16)\n",
+    "plt.suptitle(\"Distribution of middle Sum Curvatures by Sample Type\", fontsize=16)\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
