--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -762,7 +762,7 @@
    "outputs": [],
    "source": [
     "# for each sample type, we want to quantify the sharpness of the turn in the middle X% of the traces for each grain\n",
-    "middle_distance_nm = 10\n",
+    "middle_distance_nm = 14\n",
     "\n",
     "bad_grains_middle_curvature_analysis = []\n",
     "grain_dicts_middle_curvature_analysis = {}\n",
@@ -833,35 +833,36 @@
     "\n",
     "print(f\"Bad grains for middle curvature analysis: {bad_grains_middle_curvature_analysis}\")\n",
     "\n",
-    "# plot the middle curvature analysis\n",
-    "for sample_type, grain_dict in grain_dicts_middle_curvature_analysis.items():\n",
-    "    plot_all_grains_dictionary(\n",
-    "        grain_dict=grain_dict,\n",
-    "        vmin=VMIN,\n",
-    "        vmax=VMAX,\n",
-    "        cmap=CMAP,\n",
-    "        plot_paths=[\"middle_path_px\"],\n",
-    "        plot_colour_paths=[(\"middle_path_px\", \"middle_path_curvatures\")],\n",
-    "        plot_lineplots=[\n",
-    "            [\n",
-    "                \"middle_cumulative_resampled_distances_nm\",\n",
-    "                \"middle_path_curvatures\",\n",
-    "                \"distance (nm)\",\n",
-    "                \"curvature (rad/nm)\",\n",
-    "                \"Curvature\",\n",
-    "                (-0.5, 0.5),\n",
-    "            ]\n",
-    "        ],\n",
-    "        plot_lineplot_hlines=[\n",
-    "            (defect_curvature_threshold_radpernm, \"upper curvature threshold\"),\n",
-    "            (-defect_curvature_threshold_radpernm, \"lower curvature threshold\"),\n",
-    "        ],\n",
-    "        save_path=save_dirs[sample_type] / f\"grains_middle_path_curvature_{sample_type}.png\",\n",
-    "        show_plot=True,\n",
-    "        figsize_multiplier=5,\n",
-    "        num_grains_to_limit_to=30,\n",
-    "        num_cols=5,\n",
-    "    )"
+    "if False:\n",
+    "    # plot the middle curvature analysis\n",
+    "    for sample_type, grain_dict in grain_dicts_middle_curvature_analysis.items():\n",
+    "        plot_all_grains_dictionary(\n",
+    "            grain_dict=grain_dict,\n",
+    "            vmin=VMIN,\n",
+    "            vmax=VMAX,\n",
+    "            cmap=CMAP,\n",
+    "            plot_paths=[\"middle_path_px\"],\n",
+    "            plot_colour_paths=[(\"middle_path_px\", \"middle_path_curvatures\")],\n",
+    "            plot_lineplots=[\n",
+    "                [\n",
+    "                    \"middle_cumulative_resampled_distances_nm\",\n",
+    "                    \"middle_path_curvatures\",\n",
+    "                    \"distance (nm)\",\n",
+    "                    \"curvature (rad/nm)\",\n",
+    "                    \"Curvature\",\n",
+    "                    (0.0, 0.5),\n",
+    "                ]\n",
+    "            ],\n",
+    "            plot_lineplot_hlines=[\n",
+    "                (defect_curvature_threshold_radpernm, \"upper curvature threshold\"),\n",
+    "                (-defect_curvature_threshold_radpernm, \"lower curvature threshold\"),\n",
+    "            ],\n",
+    "            save_path=save_dirs[sample_type] / f\"grains_middle_path_curvature_{sample_type}.png\",\n",
+    "            show_plot=True,\n",
+    "            figsize_multiplier=5,\n",
+    "            num_grains_to_limit_to=30,\n",
+    "            num_cols=5,\n",
+    "        )"
    ]
   },
   {
@@ -872,78 +873,73 @@
    "outputs": [],
    "source": [
     "# plot the distributions of middle curvature stats\n",
-    "all_middle_mean_curvatures = {}\n",
-    "all_middle_std_curvatures = {}\n",
-    "all_middle_sum_curvatures = {}\n",
+    "all_middle_curvature_stats = []\n",
     "for sample_type, grain_dict in grain_dicts_middle_curvature_analysis.items():\n",
-    "    middle_mean_curvatures = []\n",
-    "    middle_std_curvatures = []\n",
-    "    middle_sum_curvatures = []\n",
     "    for grain_index, grain_data in grain_dict.items():\n",
-    "        middle_mean_curvatures.append(grain_data[\"middle_path_mean_curvature\"])\n",
-    "        middle_std_curvatures.append(grain_data[\"middle_path_std_curvature\"])\n",
-    "        middle_sum_curvatures.append(grain_data[\"middle_path_sum_curvature\"])\n",
-    "    all_middle_mean_curvatures[sample_type] = middle_mean_curvatures\n",
-    "    all_middle_std_curvatures[sample_type] = middle_std_curvatures\n",
-    "    all_middle_sum_curvatures[sample_type] = middle_sum_curvatures\n",
+    "        all_middle_curvature_stats.append(\n",
+    "            {\n",
+    "                \"sample_type\": sample_type,\n",
+    "                \"mean_curvature\": grain_data[\"middle_path_mean_curvature\"],\n",
+    "                \"std_curvature\": grain_data[\"middle_path_std_curvature\"],\n",
+    "                \"sum_curvature\": grain_data[\"middle_path_sum_curvature\"],\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "df_all_middle_curvature_stats = pd.DataFrame(all_middle_curvature_stats)\n",
     "\n",
     "# plot mean curvatures\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
-    "for i, (sample_type, mean_curvatures) in enumerate(all_middle_mean_curvatures.items()):\n",
-    "    sns.stripplot(x=[sample_type] * len(mean_curvatures), y=mean_curvatures, color=\"grey\", ax=axes[i])\n",
-    "    sns.violinplot(\n",
-    "        x=[sample_type] * len(mean_curvatures),\n",
-    "        y=mean_curvatures,\n",
-    "        color=\"lightblue\",\n",
-    "        inner=None,\n",
-    "        linewidth=0.5,\n",
-    "        alpha=0.5,\n",
-    "        ax=axes[i],\n",
-    "    )\n",
-    "    axes[i].set_title(f\"Mean Curvature - {sample_type}\")\n",
-    "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
-    "    axes[i].set_xticklabels([])\n",
-    "plt.suptitle(\"Distribution of middle Mean Curvatures by Sample Type\", fontsize=16)\n",
+    "sns.stripplot(x=\"sample_type\", y=\"mean_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"mean_curvature\",\n",
+    "    data=df_all_middle_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"Mean Curvature by Sample Type\")\n",
+    "plt.ylabel(\"Mean curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
+    "\n",
     "# plot std curvatures\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
-    "for i, (sample_type, std_curvatures) in enumerate(all_middle_std_curvatures.items()):\n",
-    "    sns.stripplot(x=[sample_type] * len(std_curvatures), y=std_curvatures, color=\"grey\", ax=axes[i])\n",
-    "    sns.violinplot(\n",
-    "        x=[sample_type] * len(std_curvatures),\n",
-    "        y=std_curvatures,\n",
-    "        color=\"lightblue\",\n",
-    "        inner=None,\n",
-    "        linewidth=0.5,\n",
-    "        alpha=0.5,\n",
-    "        ax=axes[i],\n",
-    "    )\n",
-    "    axes[i].set_title(f\"Std Curvature - {sample_type}\")\n",
-    "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
-    "    axes[i].set_xticklabels([])\n",
-    "plt.suptitle(\"Distribution of middle Std Curvatures by Sample Type\", fontsize=16)\n",
+    "sns.stripplot(x=\"sample_type\", y=\"std_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"std_curvature\",\n",
+    "    data=df_all_middle_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"Std Curvature by Sample Type\")\n",
+    "plt.ylabel(\"Std curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
+    "\n",
     "# plot sum curvatures\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
-    "for i, (sample_type, sum_curvatures) in enumerate(all_middle_sum_curvatures.items()):\n",
-    "    sns.stripplot(x=[sample_type] * len(sum_curvatures), y=sum_curvatures, color=\"grey\", ax=axes[i])\n",
-    "    sns.violinplot(\n",
-    "        x=[sample_type] * len(sum_curvatures),\n",
-    "        y=sum_curvatures,\n",
-    "        color=\"lightblue\",\n",
-    "        inner=None,\n",
-    "        linewidth=0.5,\n",
-    "        alpha=0.5,\n",
-    "        ax=axes[i],\n",
-    "    )\n",
-    "    axes[i].set_title(f\"Sum Curvature - {sample_type}\")\n",
-    "    axes[i].set_ylabel(\"Curvature (rad/nm)\")\n",
-    "    axes[i].set_xticklabels([])\n",
-    "plt.suptitle(\"Distribution of middle Sum Curvatures by Sample Type\", fontsize=16)\n",
+    "sns.stripplot(x=\"sample_type\", y=\"sum_curvature\", data=df_all_middle_curvature_stats, color=\"grey\")\n",
+    "sns.violinplot(\n",
+    "    x=\"sample_type\",\n",
+    "    y=\"sum_curvature\",\n",
+    "    data=df_all_middle_curvature_stats,\n",
+    "    color=\"lightblue\",\n",
+    "    inner=None,\n",
+    "    linewidth=0.5,\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.title(\"Sum Curvature by Sample Type\")\n",
+    "plt.ylabel(\"Sum curvature (rad/nm)\")\n",
+    "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
