add tests for normality

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -938,6 +938,38 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
+    "# test for normality to decide between parametric (ANOVA) vs non-parametric (Kruskal-Wallis) tests\n",
+    "from scipy.stats import shapiro, levene, kruskal, f_oneway, ttest_ind\n",
+    "import scipy.stats as scipy_stats\n",
+    "from pingouin import welch_anova\n",
+    "\n",
+    "\n",
+    "def test_normality_and_homogeneity(data_df: pd.DataFrame, column: str, sample_differentiator_column: str):\n",
+    "    unique_samples = data_df[sample_differentiator_column].unique()\n",
+    "    print(f\"Normality and Homogeneity Tests for {column} for {unique_samples}\")\n",
+    "\n",
+    "    # test normality for each column using shaprio-wilk test\n",
+    "    normality_results = {}\n",
+    "    for sample_type in unique_samples:\n",
+    "        sample_data = data_df[data_df[sample_differentiator_column] == sample_type][column].values\n",
+    "        # shapiro-wilk test for n<5000\n",
+    "        shapiro_stat, shapiro_p_value = shapiro(sample_data)\n",
+    "        is_normal = shapiro_p_value > 0.05\n",
+    "        normality_results[sample_type] = is_normal\n",
+    "        print(f\"{sample_type}: n={len(sample_data)}, Shapiro-Wilk p={shapiro_p_value:.4f}, Normal: {is_normal}\")\n",
+    "\n",
+    "    # test homogeneity of variances using Levene's test\n",
+    "    levene_stat, levene_p_value = levene(\n",
+    "        *[\n",
+    "            data_df[data_df[sample_differentiator_column] == sample_type][column].values\n",
+    "            for sample_type in unique_samples\n",
+    "        ]\n",
+    "    )\n",
+    "    is_homogeneous = levene_p_value > 0.05\n",
+    "    print(f\"Levene's test: p={levene_p_value:.4f}, Homogeneous: {is_homogeneous}\")\n",
+    "\n",
+    "    return normality_results, is_homogeneous\n",
+    "\n",
     "\n",
     "\n"
    ]
