add functions for plotting visual normality (q-q plot) and deciding which tests to use

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -970,7 +970,29 @@
     "\n",
     "    return normality_results, is_homogeneous\n",
     "\n",
+    "def decide_test(normality_results, is_homogeneous):\n",
+    "    if all(normality_results.values()) and is_homogeneous:\n",
+    "        return \"anova\"\n",
+    "    elif all(normality_results.values()) and not is_homogeneous:\n",
+    "        return \"welch_anova\"\n",
+    "    else:\n",
+    "        return \"kruskal_wallis\"\n",
     "\n",
+    "\n",
+    "def qq_plots_visual_normality_test(data_df: pd.DataFrame, column: str, sample_differentiator_column: str):\n",
+    "    unique_samples = data_df[sample_differentiator_column].unique()\n",
+    "    fig, axes = plt.subplots(1, len(unique_samples), figsize=(15, 5), sharey=True)\n",
+    "    for i, sample_type in enumerate(unique_samples):\n",
+    "        scipy_stats.probplot(\n",
+    "            data_df[data_df[sample_differentiator_column] == sample_type][column],\n",
+    "            dist=\"norm\",\n",
+    "            plot=axes[i],\n",
+    "        )\n",
+    "        axes[i].set_title(f\"Q-Q Plot: {sample_type}\")\n",
+    "        axes[i].grid(True, alpha=0.3)\n",
+    "    plt.suptitle(\"Q-Q Plots (should be linear if normal)\", fontsize=16)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
     "\n"
    ]
   }
