add function to run stats tests on dataframe columns

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -993,7 +993,48 @@
     "    plt.suptitle(\"Q-Q Plots (should be linear if normal)\", fontsize=16)\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "\n"
+    "\n",
+    "def run_tests(recommended_test: str, data_df: pd.DataFrame, column: str, sample_differentiator_column: str):\n",
+    "    if recommended_test == \"anova\":\n",
+    "        print(\"Running ANOVA test\")\n",
+    "        anova_result = f_oneway(\n",
+    "            *[\n",
+    "                data_df[data_df[sample_differentiator_column] == sample_type][column].values\n",
+    "                for sample_type in data_df[sample_differentiator_column].unique()\n",
+    "            ]\n",
+    "        )\n",
+    "        print(f\"ANOVA result: F={anova_result.statistic:.4f}, p={anova_result.pvalue:.4f}\")\n",
+    "        if anova_result.pvalue < 0.05:\n",
+    "            print(\n",
+    "                \"Significant differences found, can proceed with a post-hoc test like Tukey HSD (used for when assumptions of ANOVA are met)\"\n",
+    "            )\n",
+    "        else:\n",
+    "            print(\"No significant differences found\")\n",
+    "    elif recommended_test == \"welch_anova\":\n",
+    "        print(\"Running Welch's ANOVA test\")\n",
+    "        welch_result = welch_anova(dv=column, between=sample_differentiator_column, data=data_df)\n",
+    "        print(f\"Welch's ANOVA result: F={welch_result['F'].values[0]:.4f}, p={welch_result['pval'].values[0]:.4f}\")\n",
+    "        if welch_result[\"pval\"].values[0] < 0.05:\n",
+    "            print(\n",
+    "                \"Significant differences found, can proceed with a post-hoc test like Games-Howell (used for when assumptions of ANOVA are not met)\"\n",
+    "            )\n",
+    "        else:\n",
+    "            print(\"No significant differences found\")\n",
+    "    elif recommended_test == \"kruskal_wallis\":\n",
+    "        print(\"Running Kruskal-Wallis test\")\n",
+    "        kruskal_result = kruskal(\n",
+    "            *[\n",
+    "                data_df[data_df[sample_differentiator_column] == sample_type][column].values\n",
+    "                for sample_type in data_df[sample_differentiator_column].unique()\n",
+    "            ]\n",
+    "        )\n",
+    "        print(f\"Kruskal-Wallis result: H={kruskal_result.statistic:.4f}, p={kruskal_result.pvalue:.4f}\")\n",
+    "        if kruskal_result.pvalue < 0.05:\n",
+    "            print(\n",
+    "                \"Significant differences found, can proceed with a post-hoc test like Dunn's test (used for non-parametric tests)\"\n",
+    "            )\n",
+    "        else:\n",
+    "            print(\"No significant differences found\")\n"
    ]
   }
  ],
