add wrapper function to decide and run stats tests

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -1034,7 +1034,29 @@
     "                \"Significant differences found, can proceed with a post-hoc test like Dunn's test (used for non-parametric tests)\"\n",
     "            )\n",
     "        else:\n",
-    "            print(\"No significant differences found\")\n"
+    "            print(\"No significant differences found\")\n",
+    "\n",
+    "def decide_and_run_stats_tests(data_df: pd.DataFrame, column: str, sample_differentiator_column: str):\n",
+    "\n",
+    "    print(f\"\\n\\n=== running stats tests for column [{column}]\")\n",
+    "\n",
+    "    normality_results, is_homogeneous = test_normality_and_homogeneity(\n",
+    "        data_df=data_df, column=column, sample_differentiator_column=sample_differentiator_column\n",
+    "    )\n",
+    "\n",
+    "    recommended_test = decide_test(normality_results, is_homogeneous)\n",
+    "    print(f\"Recommended test: {recommended_test}\")\n",
+    "\n",
+    "    qq_plots_visual_normality_test(\n",
+    "        data_df=data_df, column=column, sample_differentiator_column=sample_differentiator_column\n",
+    "    )\n",
+    "\n",
+    "    run_tests(\n",
+    "        recommended_test=recommended_test,\n",
+    "        data_df=data_df,\n",
+    "        column=column,\n",
+    "        sample_differentiator_column=sample_differentiator_column,\n",
+    "    )"
    ]
   }
  ],
