run tests on sum, std and mean curvature

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -1056,7 +1056,19 @@
     "        data_df=data_df,\n",
     "        column=column,\n",
     "        sample_differentiator_column=sample_differentiator_column,\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "decide_and_run_stats_tests(\n",
+    "    data_df=df_all_middle_curvature_stats, column=\"sum_curvature\", sample_differentiator_column=\"sample_type\"\n",
+    ")\n",
+    "\n",
+    "decide_and_run_stats_tests(\n",
+    "    data_df=df_all_middle_curvature_stats, column=\"mean_curvature\", sample_differentiator_column=\"sample_type\"\n",
+    ")\n",
+    "\n",
+    "decide_and_run_stats_tests(\n",
+    "    data_df=df_all_middle_curvature_stats, column=\"std_curvature\", sample_differentiator_column=\"sample_type\"\n",
+    ")\n"
    ]
   }
  ],
