do a t-test just between OT1 and OT2

--- a/hariborings/cas9_analysis_again.ipynb
+++ b/hariborings/cas9_analysis_again.ipynb
@@ -1068,7 +1068,21 @@
     "\n",
     "decide_and_run_stats_tests(\n",
     "    data_df=df_all_middle_curvature_stats, column=\"std_curvature\", sample_differentiator_column=\"sample_type\"\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "\n",
+    "# just run a t-test between OT1 and OT2\n",
+    "\n",
+    "ot1_data = df_all_middle_curvature_stats[df_all_middle_curvature_stats[\"sample_type\"] == \"OT1_SC\"][\"mean_curvature\"]\n",
+    "ot2_data = df_all_middle_curvature_stats[df_all_middle_curvature_stats[\"sample_type\"] == \"OT2_SC\"][\"mean_curvature\"]\n",
+    "\n",
+    "\n",
+    "t_stat, p_value = ttest_ind(ot1_data, ot2_data, equal_var=False)\n",
+    "print(f\"T-test between OT1 and OT2: T={t_stat:.4f}, p={p_value:.4f}\")\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Significant differences found\")\n",
+    "else:\n",
+    "    print(\"No significant differences found\")\n"
    ]
   }
  ],
